[gd_scene load_steps=11 format=2]

[ext_resource path="res://Art/menuBackground.png" type="Texture" id=1]
[ext_resource path="res://Art/UI/MenuUI/menuButtonHovered.png" type="Texture" id=2]
[ext_resource path="res://Art/UI/MenuUI/menuButtonPressed.png" type="Texture" id=3]
[ext_resource path="res://Art/UI/MenuUI/menuButton.png" type="Texture" id=4]
[ext_resource path="res://Font/BAHNSCHRIFT.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Victory.gd" type="Script" id=6]
[ext_resource path="res://Sounds/Other Sounds/select.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "fadein"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/VBoxContainer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer/VBoxContainer/Label2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer/VBoxContainer/Label3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HBoxContainer/VBoxContainer/HBoxContainer/menuButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Victory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 720.0
rect_min_size = Vector2( 100, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 1176.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 1072.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 1072.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 229.0
margin_right = 1072.0
margin_bottom = 279.0
rect_min_size = Vector2( 0, 50 )

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 283.0
margin_right = 1072.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 1 )
text = "You make your way back to the frigate that dropped you off at the entrance to the Dimension Gate you travelled through to get here. You're glad to leave this miserable place and go back home to your own dimension."
align = 1
valign = 1
autowrap = true

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 332.0
margin_right = 1072.0
margin_bottom = 382.0
rect_min_size = Vector2( 0, 50 )

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 386.0
margin_right = 1072.0
margin_bottom = 407.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 411.0
margin_right = 1072.0
margin_bottom = 612.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 616.0
margin_right = 1072.0
margin_bottom = 666.0
alignment = 1

[node name="menuButton" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 411.0
margin_right = 661.0
margin_bottom = 50.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer/menuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
custom_fonts/font = SubResource( 2 )
text = "Main Menu"
align = 1
valign = 1
uppercase = true

[node name="MarginContainer5" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 670.0
margin_right = 1072.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 50 )

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 1180.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 100, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadein = SubResource( 3 )

[node name="menuSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="button_down" from="HBoxContainer/VBoxContainer/HBoxContainer/menuButton" to="." method="_on_menuButton_button_down"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer/HBoxContainer/menuButton" to="." method="_on_menuButton_button_up"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/HBoxContainer/menuButton" to="." method="_on_menuButton_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/HBoxContainer/menuButton" to="." method="_on_menuButton_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/menuButton" to="." method="_on_menuButton_pressed"]
